# serializer version: 1
# name: test_all_entities[climate.test_thermostat_thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'auto',
        'on',
        'Circulate',
      ]),
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.AUTO: 'auto'>,
      ]),
      'max_humidity': 50,
      'max_temp': 35.0,
      'min_humidity': 10,
      'min_temp': 7.0,
      'preset_modes': list([
        'none',
        'Vacation',
        'away',
      ]),
      'target_temp_step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.test_thermostat_thermostat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Thermostat',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Thermostat',
    'platform': 'aprilaire',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 30>,
    'translation_key': 'thermostat',
    'unique_id': 'aa:bb:cc:dd:ee:ff_thermostat',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[climate.test_thermostat_thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_humidity': 45,
      'current_temperature': 22.5,
      'fan_mode': 'auto',
      'fan_modes': list([
        'auto',
        'on',
        'Circulate',
      ]),
      'friendly_name': 'Test Thermostat Thermostat',
      'humidity': 35,
      'hvac_action': <HVACAction.IDLE: 'idle'>,
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.AUTO: 'auto'>,
      ]),
      'max_humidity': 50,
      'max_temp': 35.0,
      'min_humidity': 10,
      'min_temp': 7.0,
      'preset_mode': 'none',
      'preset_modes': list([
        'none',
        'Vacation',
        'away',
      ]),
      'supported_features': <ClimateEntityFeature: 30>,
      'target_temp_high': 25.0,
      'target_temp_low': 20.0,
      'target_temp_step': 0.5,
    }),
    'context': <ANY>,
    'entity_id': 'climate.test_thermostat_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
